@@ -3,6 +3,8 @@ Version: 0.1.20
 Date: ???
   Changes:
     - Reorganized data/updates/fixes to be more compatible with other mods
+  Bug fixes:
+    - Fixed compatibility when tiles forbid quality
 ---------------------------------------------------------------------------------------------------
 Version: 0.1.19
 Date: 2023-11-30
